# flatc.rs

./: Cargo.toml  README.md
.github/actions/update-cargo-suffix/: action.yml  update-cargo-suffix.sh
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
src/: lib.rs
