[package]
name = "flatc"
version = "0.4.0+25.12.19"
edition = "2024"
description = "Vendored executable of flatbuffer's `flatc`."
documentation = "https://docs.rs/flatc"
readme = "README.md"
repository = "https://github.com/chippers/flatc.rs"
license = "MIT"
keywords = ["flatbuffers"]

[build-dependencies]
cmake = "0.1"
