[package]
name = "flatc-fork"
version = "0.5.0+25.2.10"
edition = "2024"
description = "Vendored executable of flatbuffer's `flatc` (maintained fork)."
documentation = "https://docs.rs/flatc-fork"
readme = "README.md"
repository = "https://github.com/itpetey/flatc.rs"
license = "MIT"
keywords = ["flatbuffers"]

[build-dependencies]
cmake = "0.1"
